<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">FlexConnect</string>
    <string name="launcher_title">FlexConnect</string>
    <string name="title_activity_dashboard">Deliveries</string>
    <string name="title_activity_detail">Delivery</string>

    <string name="button_title">Submit</string>
    <string name="phone_hint_mask">(___) ___ - ____</string>
    <string name="auth_code_hint">Authentication Code</string>
    <string name="submit_dialog_title">Submit Error</string>
    <string name="submit_dialog_error_message">Please enter a valid phone number</string>

    <string name="delivery_logout_title">Logout</string>
    <string name="delivery_logout_message">Do you want to log out of the application?</string>
    <string name="delivery_logout_pos_button">Ok</string>
    <string name="delivery_logout_neg_button">Cancel</string>

    <string name="network_availability_error_title">No Network Connection</string>
    <string name="network_availability_error_message">A connection to a network or Internet could not be verified.  Please try again.</string>

    <string name="bottom_nav_phone_number">Phone Number</string>
    <string name="bottom_nav_deliveries">Deliveries</string>

    <string name="delivery_status_label">Status:</string>
    <string name="delivery_time_label">Time:</string>
    <string name="delivery_eta_label">ETA:</string>
    <string name="delivery_distance_label">Distance:</string>
    <string name="delivery_detail_no_deliveries_title">Delivery Status</string>
    <string name="delivery_detail_no_deliveries_message">There are currently no deliveries scheduled.  Please pull down to refresh the deliveries list.</string>
    <string name="delivery_detail_no_deliveries_error_message">There was an error retrieving deliveries.  Showing recently saved deliveries if available.</string>

    <string name="delivery_auth_error_title">Authentication Error</string>
    <string name="delivery_auth_error_message">The authentication was not successful. Please try again.</string>

    <string name="delivery_detail_distance_label">Distance:</string>
    <string name="delivery_detail_eta_label">ETA:</string>
    <string name="delivery_detail_report_label">Last Reported:</string>
    <string name="delivery_detail_comments_label">Comments:</string>
    <string name="delivery_detail_enroute_status_label">En Route</string>
    <string name="delivery_detail_delivered_status_label">Delivered</string>
    <string name="delivery_detail_directions_button_label">Driving Directions</string>
    <string name="delivery_detail_error_title">Data Error</string>
    <string name="delivery_detail_error_message">We are unable to retrieve delivery information.  Please try again.</string>
    <string name="delivery_detail_delivered_photo_title">Delivery Picture</string>
    <string name="delivery_detail_delivered_photo_message">Take a picture of the delivery?</string>
    <string name="delivery_detail_delivered_image_success_message">Picture uploaded successfully</string>
    <string name="delivery_detail_delivered_image_failure_message">We were unable to complete the picture upload. Please try again.</string>
    <string name="delivery_detail_permission_required_title">Permission Required</string>
    <string name="delivery_detail_permission_required_message">This permission is required for this application to function. Please enable the permission.</string>
    <string name="delivery_detail_permission_pos_button">GO TO SETTINGS</string>
    <string name="delivery_detail_permission_neg_button">CANCEL</string>
    <string name="delivery_detail_no_picture_message">NO PICTURE</string>

    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_location">Location Permission has been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_location_rationale">Location permission is needed to send location updates.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_send">SEND</string>
    <string name="dialog_retake">RETAKE</string>
    <string name="settings">Settings</string>

    <string name="phone_shared_pref_key">phone_shared_pref_key</string>
    <string name="is_running_shared_pref_key">is_running_shared_pref_key</string>
    <string name="interval_pref_key">interval_pref_key</string>
</resources>
