<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageConfirmContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/detailsConfirmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/delivery_detail_delivered_photo_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/detailsImageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_below="@id/detailsConfirmTitle"
        android:layout_above="@+id/detailsControlsContainer"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/detailsConfirmImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Confirmation photo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsControlsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detailsCancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/dialog_cancel"
            android:textAlignment="center"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/detailsRetakeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/dialog_retake"
            android:textAlignment="center"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/detailsSendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/dialog_send"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>