<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:focusable="true">

        <TextView
            android:id="@+id/deliveryNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Chase Field"/>

        <TextView
            android:id="@+id/deliveryAddress1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="16sp"
            tools:text="401 E Jefferson St"/>

        <TextView
            android:id="@+id/deliveryAddress2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:singleLine="false"
            android:textSize="16sp"
            tools:text="Phoenix, AZ 85004"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:rowOrderPreserved="true"
            android:useDefaultMargins="true">

            <!-- Row 0 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/delivery_status_label"
                tools:text="Status:"/>

            <TextView
                android:id="@+id/statusValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="0"
                android:layout_column="1"
                tools:text="En Route"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/delivery_eta_label"
                tools:text="ETA:"/>

            <TextView
                android:id="@+id/etaValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="0"
                android:layout_column="3"
                tools:text="38 mins"/>

            <!-- Row 1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/delivery_time_label"
                tools:text="Time:"/>

            <TextView
                android:id="@+id/timeValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="1"
                android:layout_column="1"
                tools:text="Anytime Before 5PM"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/delivery_distance_label"
                tools:text="Distance:"/>

            <TextView
                android:id="@+id/distanceValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_row="1"
                android:layout_column="3"
                tools:text="33 miles"/>
        </GridLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorRuleGrey"/>
</LinearLayout>